[gd_scene load_steps=10 format=3 uid="uid://ch6dodawp5y7b"]

[ext_resource type="Script" path="res://core/global/Debug.gd" id="1_cbep4"]
[ext_resource type="FontFile" uid="uid://u22lurt0biko" path="res://core/resource/font/DinkieBitmap-7pxDemo.ttf" id="2_qme33"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wtgou"]
bg_color = Color(1, 1, 1, 0.294118)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ll4gv"]
bg_color = Color(1, 1, 1, 0.509804)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_caypu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1qd81"]
content_margin_left = 3.0
content_margin_right = 3.0
bg_color = Color(0, 0, 0, 0.709804)

[sub_resource type="Theme" id="Theme_2ud3w"]
default_font = ExtResource("2_qme33")
Label/colors/font_color = Color(0.117647, 0.901961, 0.823529, 1)
VScrollBar/styles/grabber = SubResource("StyleBoxFlat_wtgou")
VScrollBar/styles/grabber_highlight = SubResource("StyleBoxFlat_ll4gv")
VScrollBar/styles/grabber_pressed = SubResource("StyleBoxFlat_caypu")
VScrollBar/styles/scroll = SubResource("StyleBoxFlat_1qd81")
VScrollBar/styles/scroll_focus = SubResource("StyleBoxFlat_1qd81")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pvoca"]
content_margin_left = 5.0
content_margin_top = 0.0
content_margin_right = 5.0
content_margin_bottom = 0.0
bg_color = Color(0, 0, 0, 0.529412)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yqk42"]
content_margin_left = 5.0
content_margin_top = 3.0
content_margin_right = 5.0
content_margin_bottom = 1.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Debug" type="CanvasLayer"]
process_mode = 3
layer = 4
follow_viewport_scale = 46.283
script = ExtResource("1_cbep4")
offset_top1 = 700
offset_top2 = 1053

[node name="MC" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1053.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MC"]
layout_mode = 2

[node name="DebugPrinter" type="RichTextLabel" parent="MC/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 1
theme = SubResource("Theme_2ud3w")
theme_override_font_sizes/normal_font_size = 20
theme_override_styles/focus = SubResource("StyleBoxFlat_pvoca")
theme_override_styles/normal = SubResource("StyleBoxFlat_yqk42")
bbcode_enabled = true
scroll_following = true
context_menu_enabled = true
selection_enabled = true
text_direction = 1

[node name="Button" type="Button" parent="MC/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[connection signal="mouse_entered" from="MC/HBoxContainer/DebugPrinter" to="." method="_on_printer_mouse_entered"]
[connection signal="mouse_exited" from="MC/HBoxContainer/DebugPrinter" to="." method="_on_printer_mouse_exited"]
[connection signal="pressed" from="MC/HBoxContainer/Button" to="." method="_on_button_pressed"]
